--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -17,7 +17,7 @@
 ; ESP32
 ; SAMD
 ; NRF52
-; STM32
+STM32
 ; pico
 ; portenta_h7_m7
 ; portenta_h7_m4
@@ -27,8 +27,8 @@
 ;default_envs = ESP8266
 ;default_envs = ESP32
 ;default_envs = SAMD
-default_envs = NRF52
-;default_envs = STM32
+;default_envs = NRF52
+default_envs = STM32
 ;default_envs = pico
 ;default_envs = portenta_h7_m7
 ;default_envs = portenta_h7_m4
@@ -72,14 +72,14 @@ lib_deps =
 ; PlatformIO 5.x  
   khoih-prog/Functional-Vlpp@~1.0.2
   khoih-prog/Ethernet_Generic@~2.8.1
-  jandrassy/EthernetENC@~2.0.3
-  uipethernet/UIPEthernet@~2.0.12
+  ;jandrassy/EthernetENC@~2.0.3
+ ; uipethernet/UIPEthernet@~2.0.12
 ;  ssilverman/QNEthernet@>=0.17.0
   
-  khoih-prog/WiFiNINA_Generic@>=1.8.15-1
-  khoih-prog/WiFi101_Generic@>=1.0.0
-  khoih-prog/WiFiMulti_Generic@>=1.2.2
-  khoih-prog/ESP_AT_Lib@>=1.5.1  
+ ; khoih-prog/WiFiNINA_Generic@>=1.8.15-1
+  ;khoih-prog/WiFi101_Generic@>=1.0.0
+ ; khoih-prog/WiFiMulti_Generic@>=1.2.2
+  ;khoih-prog/ESP_AT_Lib@>=1.5.1  
   
 ;  stm32duino/STM32duino LwIP@~2.1.2
 ;  stm32duino/STM32duino STM32Ethernet@~1.3.0
@@ -290,9 +290,9 @@ lib_deps =
 ;  STM32duino STM32Ethernet@>=1.3.0
 ; PlatformIO 5.x  
 ;  philbowles/STM32AsyncTCP
- https://github.com/khoih-prog/STM32AsyncTCP.git
- stm32duino/STM32duino LwIP@>=2.1.2
- stm32duino/STM32duino STM32Ethernet@>=1.3.0
+ ;https://github.com/khoih-prog/STM32AsyncTCP.git
+ ;stm32duino/STM32duino LwIP@>=2.1.2
+ ;stm32duino/STM32duino STM32Ethernet@>=1.3.0
 
 ; ============================================================
 ; Choose your board by uncommenting one of the following lines
@@ -388,7 +388,7 @@ lib_deps =
 ;board = maplemini_f103cb
 ;board = blackpill_f303cc
 ;board = black_f407ve
-;board = black_f407vg
+board = black_f407vg
 ;board = black_f407ze
 ;board = black_f407zg
 ;board = blue_f407ve_mini
@@ -439,7 +439,7 @@ lib_deps =
 ; QNEthernet@>=0.17.0
 ;
 ; PlatformIO 5.x  
-  ssilverman/QNEthernet@>=0.17.0
+ ; ssilverman/QNEthernet@>=0.17.0
 
 ; ============================================================
 ; Choose your board by uncommenting one of the following lines
